# iam-assumer

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: app.rs  config.rs  lib.rs  main.rs
src/http/: credential.rs
