[package]
name = "iam_assumer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iam-assumer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.10", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1.19.0", features = ["behavior-version-latest"] }
aws-smithy-types-convert = { version = "0.60.8", features = ["convert-chrono"] }
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = [
    "unicode",
    "env",
    "wrap_help",
    "derive",
] }
hyper = { version = "1.2.0", features = ["http1", "server", "full"] }
hyper-util = { version = "0.1.3", features = ["server", "http1", "full"] }
json = "0.12.4"
nix = { version = "0.28.0", features = ["process", "signal"] }
rand = "0.8.5"
rustls-native-certs = "0.7.0"
serde = { version = "1.0.197", features = ["alloc", "derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
url = "2.5.0"
